adding new files

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	 <tr><td>
 	<div class="container5"> 
 	<a href="Projects/week3/WebWorks.html"   target="_blank">
-		<img src="img/csstable.jpg" class="image5" alt="pic1" >
+		<img src="img/csstable.JPG" class="image5" alt="pic1" >
 		<div class="overlay5">
 		<div class="text5">Tables</div>
 	</div>
@@ -168,7 +168,7 @@
 	  </div></a>
 	  </td>
       <td><div class="container5">
-	  <a href="Projects/Marque/Marque.html" target="_blank"><img src="img/marquee.jpg" class="image5" alt="pic3" >
+	  <a href="Projects/Marque/Marque.html" target="_blank"><img src="img/marquee.JPG" class="image5" alt="pic3" >
 	  <div class="overlay5">
 	  <div class="text5">Marque</div></div></div></a>
 	  </td>
@@ -184,12 +184,12 @@
 	</div></a>
 	</td>
 	<td><div class="container5">
-      <a href="Projects/AgeCalculator.html" target="_blank"><img src="img/agecalculator.jpg"  class="image5" alt="pic2" >
+      <a href="Projects/AgeCalculator.html" target="_blank"><img src="img/agecalculator.JPG"  class="image5" alt="pic2" >
 	  <div class="overlay5">
 	  <div class="text5">Age Calculator</div></div></div></a>
 	  </td>
       <td><div class="container5">
-	  <a href="Projects/Cash Register.html" target="_blank"><img src="img/cash.jpg"  class="image5" alt="pic3" >
+	  <a href="Projects/Cash Register.html" target="_blank"><img src="img/cash.JPG"  class="image5" alt="pic3" >
 	  <div class="overlay5">
 	  <div class="text5">Cash Register</div></div></div></a>
 	  </td>
@@ -209,7 +209,7 @@
 	  </td>
 	   <td><div class="container5" >
 	   <a href="Projects/Imagemap/imagemap3.html" target="_blank">
-	  <img src="img/imagemap.jpg" class="image5" alt="pic4" >
+	  <img src="img/imagemap.JPG" class="image5" alt="pic4" >
 	  <div class="overlay5">
 	  <div class="text5">ImageMap</div></div></div></a>
 	  </td>
@@ -218,7 +218,7 @@
 	</tr>
 	<tr>
      <td><div class="container5">
-	  <a href="Projects/A6_SidraJaved.html" target="_blank"><img src="img/APIsnippet.jpg"class="image5" alt="pic4" >
+	  <a href="Projects/A6_SidraJaved.html" target="_blank"><img src="img/APIsnippet.JPG"class="image5" alt="pic4" >
 	  <div class="overlay5">
 	  <div class="text5">API Snippet</div></div></div></a>
 	  </td>
