--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 	</tr>
 	<tr>
      <td><div class="container5">
-	  <a href="Projects/A6_SidraJaved.html" target="_blank"><img src="img/APIsnippet.JPG"class="image5" alt="pic4" >
+	  <a href="Projects/A6_SidraJaved.html" target="_blank"><img src="img/API.png"class="image5" alt="pic4" >
 	  <div class="overlay5">
 	  <div class="text5">API Snippet</div></div></div></a>
 	  </td>
