--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div style="color:white">+1 917-225-2049</div>
+          <div style="color:white">xxxxxxxxxx
+</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
